# git-calculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
calc/: __init__.py  main.py  test_main.py  unittest_main.py
