[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Sander Beekhuis <16463246+SanderBeekhuis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
